post-check;id#: 851;v: 1.71;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -52,9 +52,8 @@ After that more than the usual with threejs demos, content, with a little new co
 
 ### () - WED 08/16/2023
 * (done) edit: threejs-materials - proof read section 6 on common features
-<!-- edit 5k+ -->
-* () forpost: threejs-buffer-geometry - new methods section demo
-* () edit: threejs-buffer-geometry - write about new method section demo
+* (done) forpost: threejs-buffer-geometry - new methods section demo
+* (done) edit: threejs-buffer-geometry - write about new method section demo
 <!-- new -->
 * () start some r152 prototypes and a for post folder for tomorrows new post
 <!-- videoground r10 -->
