--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -11,7 +11,7 @@ After that more than the usual with threejs demos, content, with a little new co
 ---------- --------->
 
 <!-------- ----------
--- videoground
+--  video ground
 ---------- --------->
 * () videoground-tri16 : new collection of video content centered around models that are composed of no more that 16 triangles
 * () videoground-aplay : start a new videoground content collection where the goal is to find ways to generate audo sample data
@@ -19,10 +19,8 @@ After that more than the usual with threejs demos, content, with a little new co
 <!-------- ----------
 -- EDIT 5k+ - Focus more so on a top ten of sorts to get to 5000+ words and 10+ demos and beyond
 ---------- --------->
-* () threejs-object3d-position - There is having a demo for raycaster
-* () threejs-buffer-geometry-position - vertex order demos
-* () threejs-data-texture - sections on canvas textures, type, format, ect
-* () threejs-texture - 
+* () threejs-materials
+* () threejs-buffer-geometry
 <!-------- ----------
 -- NEW POST IDEAS FOR LINUX
 ---------- --------->
@@ -32,6 +30,11 @@ After that more than the usual with threejs demos, content, with a little new co
 * () new : linux-musescore - start a main post on musescore
 * () new : linux-raspberry-pi-os - start a main blog post on raspbery pi os
 * () new : linux-debian - start a main post on debian linux
+<!-------- ----------
+-- NEW POST IDEAS THREEJS
+---------- --------->
+* () new : threejs-sprite - write a post on sprite objects
+* () new : threejs-buffer-geometry-attributes-tangent
 
 <!-------- ----------
 -- WEEK 3
