--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -47,7 +47,7 @@ After that more than the usual with threejs demos, content, with a little new co
 
 ### () - THU 08/17/2023
 <!-- new -->
-* () new: start post # 1067 on threejs-
+* () new: start post # 1067 on threejs-buffer-geometry-attributes-tangent
 <!-- edit 5k+ -->
 * () forpost: threejs-materials - new blending demo blending
 * () edit: threejs-materials - write about new blending demo
@@ -57,8 +57,7 @@ After that more than the usual with threejs demos, content, with a little new co
 * (done) edit: threejs-materials - proof read section 6 on common features
 * (done) forpost: threejs-buffer-geometry - new methods section demo
 * (done) edit: threejs-buffer-geometry - write about new method section demo
-<!-- new -->
-* () start some r152 prototypes and a for post folder for tomorrows new post
+* (done) start some r152 prototypes and a for post folder for tomorrows new post
 <!-- videoground r10 -->
 * () videoground: still trying to work out a good system for over all display of sample data
 <!-- videoground-beta-world -->
