--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -49,21 +49,27 @@ After that more than the usual with threejs demos, content, with a little new co
 <!-- new -->
 * () new: start post # 1067 on threejs-buffer-geometry-attributes-tangent
 <!-- edit 5k+ -->
-* () forpost: threejs-materials - new blending demo blending
+* () forpost: threejs-materials - new blending section demo 
 * () edit: threejs-materials - write about new blending demo
 * () edit: threejs-materials - proof read section 7 on blending
+* () forpost: threejs-buffer-geometry - new method section demo
+* () edit: threejs-buffer-geometry - write about new method section demo
+<!-- edit -->
+* () edit: threejs-normal-material - link to new post on tangent attributes
+* () edit: threejs-normal-map - link to new post on tangent attributes
+<!-- videoground r10 -->
+* () videoground: finish up with v21, start v22 and common js file
+<!-- videoground-beta-world -->
+* () videoground-beta-world - start a new video project on audio synth
+<!-- electionjs -->
+* () electionjs - work on position editor
 
 ### () - WED 08/16/2023
 * (done) edit: threejs-materials - proof read section 6 on common features
 * (done) forpost: threejs-buffer-geometry - new methods section demo
 * (done) edit: threejs-buffer-geometry - write about new method section demo
 * (done) start some r152 prototypes and a for post folder for tomorrows new post
-<!-- videoground r10 -->
-* () videoground: still trying to work out a good system for over all display of sample data
-<!-- videoground-beta-world -->
-* () videoground-beta-world - start a new video project on audio synth
-<!-- electionjs -->
-* () electionjs - work on position editor
+* (done) videoground: still trying to work out a good system for over all display of sample data
 
 ### () - TUE 08/15/2023
 * (done) edit: threejs-materials - proof read section 5 sprites
