--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -44,19 +44,21 @@ After that more than the usual with threejs demos, content, with a little new co
 ### () - SAT 08/19/2023
 
 ### () - FRI 08/18/2023
+<!-- edit -->
+* () forpost: threejs-buffer-geometry-attributes-tangent - more basic examples
+* () edit: threejs-buffer-geometry-attributes-tangent - write more in basic section
+<!-- edit 5k+ -->
 
 ### () - THU 08/17/2023
-<!-- new -->
-* () new: start post # 1067 on threejs-buffer-geometry-attributes-tangent
+* (done) new: start post # 1067 on threejs-buffer-geometry-attributes-tangent
+* (done) edit: threejs-normal-material - link to new post on tangent attributes
+* (done) edit: threejs-normal-map - link to new post on tangent attributes
 <!-- edit 5k+ -->
 * () forpost: threejs-materials - new blending section demo 
 * () edit: threejs-materials - write about new blending demo
 * () edit: threejs-materials - proof read section 7 on blending
 * () forpost: threejs-buffer-geometry - new method section demo
 * () edit: threejs-buffer-geometry - write about new method section demo
-<!-- edit -->
-* () edit: threejs-normal-material - link to new post on tangent attributes
-* () edit: threejs-normal-map - link to new post on tangent attributes
 <!-- videoground r10 -->
 * () videoground: finish up with v21, start v22 and common js file
 <!-- videoground-beta-world -->
