post-check;id#: 879;v: 1.49;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -53,6 +53,8 @@ After that more than the usual with threejs demos, content, with a little new co
 * (done) new: start post # 1067 on threejs-buffer-geometry-attributes-tangent
 * (done) edit: threejs-normal-material - link to new post on tangent attributes
 * (done) edit: threejs-normal-map - link to new post on tangent attributes
+* (done) forpost: threejs-shape - new basic section demo
+* (done) edit: threejs-shape - write about new basic section demo
 <!-- edit 5k+ -->
 * () forpost: threejs-materials - new blending section demo 
 * () edit: threejs-materials - write about new blending demo
