post-check;id#: 181;v: 1.121;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -55,10 +55,10 @@ After that more than the usual with threejs demos, content, with a little new co
 * (done) edit: threejs-normal-map - link to new post on tangent attributes
 * (done) forpost: threejs-shape - new basic section demo
 * (done) edit: threejs-shape - write about new basic section demo
+* (done) edit: threejs-materials - proof read section 7 on blending
 <!-- edit 5k+ -->
 * () forpost: threejs-materials - new blending section demo 
 * () edit: threejs-materials - write about new blending demo
-* () edit: threejs-materials - proof read section 7 on blending
 * () forpost: threejs-buffer-geometry - new method section demo
 * () edit: threejs-buffer-geometry - write about new method section demo
 <!-- videoground r10 -->
