post-check;id#: 181;v: 1.122;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -48,6 +48,7 @@ After that more than the usual with threejs demos, content, with a little new co
 * () forpost: threejs-buffer-geometry-attributes-tangent - more basic examples
 * () edit: threejs-buffer-geometry-attributes-tangent - write more in basic section
 <!-- edit 5k+ -->
+* () edit: threejs-materials - write more about addative blending, might want to start some r152 demos on this
 
 ### () - THU 08/17/2023
 * (done) new: start post # 1067 on threejs-buffer-geometry-attributes-tangent
@@ -56,9 +57,9 @@ After that more than the usual with threejs demos, content, with a little new co
 * (done) forpost: threejs-shape - new basic section demo
 * (done) edit: threejs-shape - write about new basic section demo
 * (done) edit: threejs-materials - proof read section 7 on blending
+* (done) forpost: threejs-materials - new blending section demo 
+* (done) edit: threejs-materials - write about new blending demo
 <!-- edit 5k+ -->
-* () forpost: threejs-materials - new blending section demo 
-* () edit: threejs-materials - write about new blending demo
 * () forpost: threejs-buffer-geometry - new method section demo
 * () edit: threejs-buffer-geometry - write about new method section demo
 <!-- videoground r10 -->
