--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -42,15 +42,20 @@ After that more than the usual with threejs demos, content, with a little new co
 ## () - WEEK 3 - SUN 08/13/2023 - SAT 08/19/2023
 
 ### () - SAT 08/19/2023
-
-### () - FRI 08/18/2023
-<!-- edit -->
-* () forpost: threejs-buffer-geometry-attributes-tangent - more basic examples
-* () edit: threejs-buffer-geometry-attributes-tangent - write more in basic section
 <!-- edit 5k+ -->
 * () edit: threejs-materials - write more about addative blending, might want to start some r152 demos on this
 * () forpost: threejs-buffer-geometry - new method section demo
 * () edit: threejs-buffer-geometry - write about new method section demo
+
+### () - FRI 08/18/2023
+* (done) forpost: threejs-buffer-geometry-attributes-tangent - more basic examples
+* (done) edit: threejs-buffer-geometry-attributes-tangent - write more in basic section
+<!-- videoground r10 -->
+* () videoground: work more on v22 and common js file
+<!-- videoground-beta-world -->
+* () videoground-beta-world - start a new video project on audio synth
+<!-- electionjs -->
+* () electionjs - work on position editor
 
 ### () - THU 08/17/2023
 * (done) new: start post # 1067 on threejs-buffer-geometry-attributes-tangent
@@ -61,12 +66,7 @@ After that more than the usual with threejs demos, content, with a little new co
 * (done) edit: threejs-materials - proof read section 7 on blending
 * (done) forpost: threejs-materials - new blending section demo 
 * (done) edit: threejs-materials - write about new blending demo
-<!-- videoground r10 -->
-* () videoground: finish up with v21, start v22 and common js file
-<!-- videoground-beta-world -->
-* () videoground-beta-world - start a new video project on audio synth
-<!-- electionjs -->
-* () electionjs - work on position editor
+* (done) videoground: finish up with v21, start v22 and common js file
 
 ### () - WED 08/16/2023
 * (done) edit: threejs-materials - proof read section 6 on common features
