--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -46,6 +46,9 @@ After that more than the usual with threejs demos, content, with a little new co
 * () edit: threejs-materials - write more about addative blending, might want to start some r152 demos on this
 * () forpost: threejs-buffer-geometry - new method section demo
 * () edit: threejs-buffer-geometry - write about new method section demo
+<!-- publish -->
+* () build and publish
+* () update comment policy in disqus settings
 
 ### () - FRI 08/18/2023
 * (done) forpost: threejs-buffer-geometry-attributes-tangent - more basic examples
