--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -19,7 +19,7 @@ After that more than the usual with threejs demos, content, with a little new co
 <!-------- ----------
 -- EDIT 5k+ - Focus more so on a top ten of sorts to get to 5000+ words and 10+ demos and beyond
 ---------- --------->
-* () threejs-materials
+* () threejs-materials - expand more on blending
 * () threejs-buffer-geometry
 <!-------- ----------
 -- NEW POST IDEAS FOR LINUX
@@ -34,7 +34,41 @@ After that more than the usual with threejs demos, content, with a little new co
 -- NEW POST IDEAS THREEJS
 ---------- --------->
 * () new : threejs-sprite - write a post on sprite objects
-* () new : threejs-buffer-geometry-attributes-tangent
+
+<!-------- ----------
+-- WEEK 4
+---------- --------->
+## () - WEEK 4 - SUN 08/20/2023 - SAT 08/26/2023
+
+
+### () - SAT 08/26/2023
+
+### () - FRI 08/25/2023
+
+### () - THU 08/24/2023
+
+### () - WED 08/23/2023
+<!-- new -->
+* () new: start post # 1068 on threejs-sprite
+
+### () - TUE 08/22/2023
+<!-- new -->
+* () start a threejs-sprite for post folder
+
+### () - MON 08/21/2023
+<!-- edit 5k+ -->
+* () forpost: threejs-buffer-geometry - new method section demo
+* () edit: threejs-buffer-geometry - write about new method section demo
+<!-- publish -->
+* () build and publish
+* () update comment policy in disqus settings
+<!-- videoground-beta-world -->
+* () audio-generator-1 : work more on timeline, start a new video on vertex
+<!-- electionjs -->
+* () electionjs - work on position editor
+
+### () - SUN 08/20/2023
+* (done) videoground-beta-world - start a new video project on audio synth
 
 <!-------- ----------
 -- WEEK 3
@@ -42,23 +76,12 @@ After that more than the usual with threejs demos, content, with a little new co
 ## () - WEEK 3 - SUN 08/13/2023 - SAT 08/19/2023
 
 ### () - SAT 08/19/2023
-<!-- edit 5k+ -->
-* () edit: threejs-materials - write more about addative blending, might want to start some r152 demos on this
-* () forpost: threejs-buffer-geometry - new method section demo
-* () edit: threejs-buffer-geometry - write about new method section demo
-<!-- publish -->
-* () build and publish
-* () update comment policy in disqus settings
+* (done) videoground-beta-world - start a new video project on audio synth
 
 ### () - FRI 08/18/2023
 * (done) forpost: threejs-buffer-geometry-attributes-tangent - more basic examples
 * (done) edit: threejs-buffer-geometry-attributes-tangent - write more in basic section
-<!-- videoground r10 -->
-* () videoground: work more on v22 and common js file
-<!-- videoground-beta-world -->
-* () videoground-beta-world - start a new video project on audio synth
-<!-- electionjs -->
-* () electionjs - work on position editor
+* (done) videoground: work more on v22 and common js file
 
 ### () - THU 08/17/2023
 * (done) new: start post # 1067 on threejs-buffer-geometry-attributes-tangent
