post-check;id#: 851;v: 1.72;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -33,6 +33,8 @@ After that more than the usual with threejs demos, content, with a little new co
 <!-------- ----------
 -- NEW POST IDEAS THREEJS
 ---------- --------->
+* () new : threejs-buffer-geometry-utils - have a post on what there is wot work with when it comes to buffer geometry utils
+* () new : threejs-sprite-matreial - post on the sprite material alone maybe
 * () new : threejs-sprite - write a post on sprite objects
 
 <!-------- ----------
@@ -56,9 +58,9 @@ After that more than the usual with threejs demos, content, with a little new co
 * () start a threejs-sprite for post folder
 
 ### () - MON 08/21/2023
+* (done) forpost: threejs-buffer-geometry - new method section demo
+* (done) edit: threejs-buffer-geometry - write about new method section demo
 <!-- edit 5k+ -->
-* () forpost: threejs-buffer-geometry - new method section demo
-* () edit: threejs-buffer-geometry - write about new method section demo
 <!-- publish -->
 * () build and publish
 * () update comment policy in disqus settings
