--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -50,24 +50,33 @@ After that more than the usual with threejs demos, content, with a little new co
 ### () - THU 08/24/2023
 
 ### () - WED 08/23/2023
+<!-- videoground-beta-world -->
+* () audio-generator-1 : pulse wave
 <!-- new -->
 * () new: start post # 1068 on threejs-sprite
 
 ### () - TUE 08/22/2023
+<!-- videoground-beta-world -->
+* (done) audio-generator-1 : square wave
+<!-- edit 5k+ -->
+* (done) edit: threejs-buffer-geometry - proof read section 2 on light
+* () forpost: threejs-buffer-geometry - expand light section with at least one new demo
+* () forpost: threejs-buffer-geometry - expand methods section with two new demos
+* () edit: threejs-buffer-geometry - write about new demos
 <!-- new -->
 * () start a threejs-sprite for post folder
-
-### () - MON 08/21/2023
-* (done) forpost: threejs-buffer-geometry - new method section demo
-* (done) edit: threejs-buffer-geometry - write about new method section demo
-<!-- edit 5k+ -->
 <!-- publish -->
 * () build and publish
 * () update comment policy in disqus settings
 <!-- videoground-beta-world -->
-* () audio-generator-1 : work more on timeline, start a new video on vertex
+* (done) audio-generator-1 : work more on timeline
 <!-- electionjs -->
 * () electionjs - work on position editor
+
+
+### () - MON 08/21/2023
+* (done) forpost: threejs-buffer-geometry - new method section demo
+* (done) edit: threejs-buffer-geometry - write about new method section demo
 
 ### () - SUN 08/20/2023
 * (done) videoground-beta-world - start a new video project on audio synth
