--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -60,7 +60,7 @@ After that more than the usual with threejs demos, content, with a little new co
 * (done) audio-generator-1 : square wave
 <!-- edit 5k+ -->
 * (done) edit: threejs-buffer-geometry - proof read section 2 on light
-* () forpost: threejs-buffer-geometry - expand light section with at least one new demo
+* (done) forpost: threejs-buffer-geometry - expand light section with at least one new demo
 * () forpost: threejs-buffer-geometry - expand methods section with two new demos
 * () edit: threejs-buffer-geometry - write about new demos
 <!-- new -->
