post-check;id#: 1068;v: 1.0;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -50,24 +50,25 @@ After that more than the usual with threejs demos, content, with a little new co
 ### () - THU 08/24/2023
 
 ### () - WED 08/23/2023
-<!-- new -->
-* () new: start post # 1068 on threejs-sprite
-<!-- videoground-beta-world -->
-* () audio-generator-1 : pulse wave
+* (done) new: start post # 1068 on threejs-sprite
 <!-- edit 5k+ -->
 * () forpost: threejs-buffer-geometry - expand methods section with two new demos
 * () edit: threejs-buffer-geometry - write about new demos
+<!-- publish -->
+* () build and publish
+* () update comment policy in disqus settings
+
+<!-- videoground-beta-world -->
+* () audio-generator-1 : pulse wave
+
+<!-- electionjs -->
+* () electionjs - work on position editor
 
 ### () - TUE 08/22/2023
 * (done) audio-generator-1 : square wave
 * (done) edit: threejs-buffer-geometry - proof read section 2 on light
 * (done) forpost: threejs-buffer-geometry - expand light section with at least one new demo
 * (done) start a threejs-sprite for post folder
-<!-- publish -->
-* () build and publish
-* () update comment policy in disqus settings
-<!-- electionjs -->
-* () electionjs - work on position editor
 
 ### () - MON 08/21/2023
 * (done) forpost: threejs-buffer-geometry - new method section demo
