post-check;id#: 851;v: 1.75;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -48,12 +48,15 @@ After that more than the usual with threejs demos, content, with a little new co
 ### () - FRI 08/25/2023
 
 ### () - THU 08/24/2023
+<!-- edit 5k+ -->
+* () forpost: threejs-buffer-geometry - expand methods section with new frompoints demo
+* () forpost: threejs-buffer-geometry - expand methods section with new clone demo
+* () edit: threejs-buffer-geometry - write about new demo
 
 ### () - WED 08/23/2023
 * (done) new: start post # 1068 on threejs-sprite
-<!-- edit 5k+ -->
-* () forpost: threejs-buffer-geometry - expand methods section with two new demos
-* () edit: threejs-buffer-geometry - write about new demos
+* (done) forpost: threejs-buffer-geometry - expand methods section with new translation demo
+* (done) edit: threejs-buffer-geometry - write about new demo
 <!-- publish -->
 * () build and publish
 * () update comment policy in disqus settings
