post-check;id#: 851;v: 1.76;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -46,26 +46,23 @@ After that more than the usual with threejs demos, content, with a little new co
 ### () - SAT 08/26/2023
 
 ### () - FRI 08/25/2023
-
-### () - THU 08/24/2023
 <!-- edit 5k+ -->
-* () forpost: threejs-buffer-geometry - expand methods section with new frompoints demo
 * () forpost: threejs-buffer-geometry - expand methods section with new clone demo
 * () edit: threejs-buffer-geometry - write about new demo
+
+### () - THU 08/24/2023
+* (done) forpost: threejs-buffer-geometry - expand methods section with new frompoints demo
+* (done) edit: threejs-buffer-geometry - write about new demo
+<!-- electionjs -->
+* () electionjs - work on position editor
 
 ### () - WED 08/23/2023
 * (done) new: start post # 1068 on threejs-sprite
 * (done) forpost: threejs-buffer-geometry - expand methods section with new translation demo
 * (done) edit: threejs-buffer-geometry - write about new demo
-<!-- publish -->
-* () build and publish
-* () update comment policy in disqus settings
-
-<!-- videoground-beta-world -->
-* () audio-generator-1 : pulse wave
-
-<!-- electionjs -->
-* () electionjs - work on position editor
+* (done) build and publish
+* (done) update comment policy in disqus settings
+* (done) audio-generator-1 : pulse wave
 
 ### () - TUE 08/22/2023
 * (done) audio-generator-1 : square wave
