--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -34,27 +34,51 @@ After that more than the usual with threejs demos, content, with a little new co
 -- NEW POST IDEAS THREEJS
 ---------- --------->
 * () new : threejs-buffer-geometry-utils - have a post on what there is wot work with when it comes to buffer geometry utils
-* () new : threejs-sprite-matreial - post on the sprite material alone maybe
-* () new : threejs-sprite - write a post on sprite objects
+* () new : threejs-sprite-material - post on the sprite material alone maybe
+
+<!-------- ----------
+-- WEEK 5
+---------- --------->
+## () - WEEK 5 - SUN 08/27/2023 - THU 08/31/2023
+
+### () - THU 08/31/2023
+<!-- new -->
+* () new: start post # 1069 on threejs-buffer-geometry-utils
+
+### () - WED 08/30/2023
+<!-- new -->
+* () forpost: threejs-buffer-geometry-utils - work on demos
+
+### () - TUE 08/29/2023
+<!-- new -->
+* () forpost: threejs-buffer-geometry-utils - work on demos
+
+### () - MON 08/28/2023
+<!-- edit 5k+ -->
+* () forpost: threejs-buffer-geometry - expand methods section with new clone demo
+* () edit: threejs-buffer-geometry - write about new demo
+<!-- new -->
+* () forpost: threejs-buffer-geometry-utils - work on demos
+<!-- videoground-beta-world -->
+* () audio-generator-1 - work on tools, and videos
+<!-- electionjs -->
+* () electionjs - work on position editor
+
+### () - SUN 08/27/2023
 
 <!-------- ----------
 -- WEEK 4
 ---------- --------->
 ## () - WEEK 4 - SUN 08/20/2023 - SAT 08/26/2023
 
-
 ### () - SAT 08/26/2023
 
 ### () - FRI 08/25/2023
-<!-- edit 5k+ -->
-* () forpost: threejs-buffer-geometry - expand methods section with new clone demo
-* () edit: threejs-buffer-geometry - write about new demo
 
 ### () - THU 08/24/2023
 * (done) forpost: threejs-buffer-geometry - expand methods section with new frompoints demo
 * (done) edit: threejs-buffer-geometry - write about new demo
-<!-- electionjs -->
-* () electionjs - work on position editor
+
 
 ### () - WED 08/23/2023
 * (done) new: start post # 1068 on threejs-sprite
