post-check;id#: 851;v: 1.77;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -52,11 +52,14 @@ After that more than the usual with threejs demos, content, with a little new co
 ### () - TUE 08/29/2023
 <!-- new -->
 * () forpost: threejs-buffer-geometry-utils - work on demos
+<!-- edit 5k+ -->
+* () forpost: threejs-buffer-geometry - expand or create a new section outline in the todo list
+* () edit: threejs-buffer-geometry - write about new demo
+
 
 ### () - MON 08/28/2023
-<!-- edit 5k+ -->
-* () forpost: threejs-buffer-geometry - expand methods section with new clone demo
-* () edit: threejs-buffer-geometry - write about new demo
+* (done) forpost: threejs-buffer-geometry - expand methods section with new clone demo
+* (done) edit: threejs-buffer-geometry - write about new demo
 <!-- new -->
 * () forpost: threejs-buffer-geometry-utils - work on demos
 <!-- videoground-beta-world -->
