post-check;id#: 851;v: 1.78;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -20,7 +20,8 @@ After that more than the usual with threejs demos, content, with a little new co
 -- EDIT 5k+ - Focus more so on a top ten of sorts to get to 5000+ words and 10+ demos and beyond
 ---------- --------->
 * () threejs-materials - expand more on blending
-* () threejs-buffer-geometry
+* () threejs-buffer-geometry - keep it up with this one
+* () threejs-basic-material - I might want to expand this one to at least 5k+ as this might be the most underraterd material option
 <!-------- ----------
 -- NEW POST IDEAS FOR LINUX
 ---------- --------->
@@ -50,22 +51,22 @@ After that more than the usual with threejs demos, content, with a little new co
 * () forpost: threejs-buffer-geometry-utils - work on demos
 
 ### () - TUE 08/29/2023
-<!-- new -->
-* () forpost: threejs-buffer-geometry-utils - work on demos
 <!-- edit 5k+ -->
 * () forpost: threejs-buffer-geometry - expand or create a new section outline in the todo list
 * () edit: threejs-buffer-geometry - write about new demo
-
-
-### () - MON 08/28/2023
-* (done) forpost: threejs-buffer-geometry - expand methods section with new clone demo
-* (done) edit: threejs-buffer-geometry - write about new demo
 <!-- new -->
 * () forpost: threejs-buffer-geometry-utils - work on demos
 <!-- videoground-beta-world -->
 * () audio-generator-1 - work on tools, and videos
 <!-- electionjs -->
 * () electionjs - work on position editor
+
+
+### () - MON 08/28/2023
+* (done) forpost: threejs-buffer-geometry - expand methods section with new clone demo
+* (done) edit: threejs-buffer-geometry - write about new demo
+* (done) forpost: threejs-buffer-geometry-utils - work on demos
+* (done) audio-generator-1 - work on tools, and videos
 
 ### () - SUN 08/27/2023
 
