post-check;id#: 851;v: 1.79;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -45,15 +45,13 @@ After that more than the usual with threejs demos, content, with a little new co
 ### () - THU 08/31/2023
 <!-- new -->
 * () new: start post # 1069 on threejs-buffer-geometry-utils
-
-### () - WED 08/30/2023
-<!-- new -->
-* () forpost: threejs-buffer-geometry-utils - work on demos
-
-### () - TUE 08/29/2023
 <!-- edit 5k+ -->
 * () forpost: threejs-buffer-geometry - expand or create a new section outline in the todo list
 * () edit: threejs-buffer-geometry - write about new demo
+
+### () - WED 08/30/2023
+* (done) forpost: threejs-buffer-geometry - expand or create a new section outline in the todo list
+* (done) edit: threejs-buffer-geometry - write about new demo
 <!-- new -->
 * () forpost: threejs-buffer-geometry-utils - work on demos
 <!-- videoground-beta-world -->
@@ -61,6 +59,9 @@ After that more than the usual with threejs demos, content, with a little new co
 <!-- electionjs -->
 * () electionjs - work on position editor
 
+### () - TUE 08/29/2023
+* (done) forpost: threejs-buffer-geometry - expand or create a new section outline in the todo list
+* (done) edit: threejs-buffer-geometry - write about new demo
 
 ### () - MON 08/28/2023
 * (done) forpost: threejs-buffer-geometry - expand methods section with new clone demo
