post-check;id#: 1069;v: 1.0;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -43,21 +43,20 @@ After that more than the usual with threejs demos, content, with a little new co
 ## () - WEEK 5 - SUN 08/27/2023 - THU 08/31/2023
 
 ### () - THU 08/31/2023
-<!-- new -->
-* () new: start post # 1069 on threejs-buffer-geometry-utils
-<!-- edit 5k+ -->
-* () forpost: threejs-buffer-geometry - expand or create a new section outline in the todo list
-* () edit: threejs-buffer-geometry - write about new demo
-
-### () - WED 08/30/2023
 * (done) forpost: threejs-buffer-geometry - expand or create a new section outline in the todo list
 * (done) edit: threejs-buffer-geometry - write about new demo
+* (done) new: start post # 1069 on threejs-buffer-geometry-utils
 <!-- new -->
 * () forpost: threejs-buffer-geometry-utils - work on demos
 <!-- videoground-beta-world -->
 * () audio-generator-1 - work on tools, and videos
 <!-- electionjs -->
 * () electionjs - work on position editor
+
+### () - WED 08/30/2023
+* (done) forpost: threejs-buffer-geometry - expand or create a new section outline in the todo list
+* (done) edit: threejs-buffer-geometry - write about new demo
+
 
 ### () - TUE 08/29/2023
 * (done) forpost: threejs-buffer-geometry - expand or create a new section outline in the todo list
