post-check;id#: 851;v: 1.81;

--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -37,6 +37,12 @@ THREEJS, videoground-beta-world, Linux
 ## () - WEEK 1 - FRI 09/01/2023 - SAT 09/02/2023
 
 ### () - SAT 09/02/2023
+<!-- EDIT -->
+* () forpost: threejs-buffer-geometry-utils - I am going to want another basic seciton demo
+* () edit: threejs-buffer-geometry-utils - write about new basic demo
+<!-- EDIT 5k+ -->
+* () forpost: threejs-buffer-geometry - keep expanding builtin section
+* () forpost: threejs-buffer-geometry - write about new demos
 <!-- videoground-beta-world -->
 * () audio-generator-1 - start posting videos for this
 <!-- electionjs -->
@@ -44,8 +50,7 @@ THREEJS, videoground-beta-world, Linux
 
 ### () - FRI 09/01/2023
 * (done) edit: threejs-buffer-geometry-utils - expand with what I have in place at least
-<!-- EDIT 5k+ -->
-* () forpost: threejs-buffer-geometry - keep expanding builtin section
-* () forpost: threejs-buffer-geometry - write about new demos
+* (done) forpost: threejs-buffer-geometry - keep expanding builtin section
+* (done) forpost: threejs-buffer-geometry - write about new demos
 
 
