post-check;id#: 1069;v: 1.3;

--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -30,6 +30,10 @@ THREEJS, videoground-beta-world, Linux
 
 * () new: start post # 1070 on threejs-
 
+### () - SUN 09/03/2023
+<!-- EDIT -->
+* () forpost: threejs-buffer-geometry-utils - I am going to want another basic seciton demo
+* () edit: threejs-buffer-geometry-utils - write about new basic demo
 
 <!-------- ----------
 -- WEEK 1
@@ -37,9 +41,8 @@ THREEJS, videoground-beta-world, Linux
 ## () - WEEK 1 - FRI 09/01/2023 - SAT 09/02/2023
 
 ### () - SAT 09/02/2023
-<!-- EDIT -->
-* () forpost: threejs-buffer-geometry-utils - I am going to want another basic seciton demo
-* () edit: threejs-buffer-geometry-utils - write about new basic demo
+* (done) forpost: threejs-buffer-geometry-utils - I am going to want another basic seciton demo
+* (done) edit: threejs-buffer-geometry-utils - write about new basic demo
 <!-- EDIT 5k+ -->
 * () forpost: threejs-buffer-geometry - keep expanding builtin section
 * () forpost: threejs-buffer-geometry - write about new demos
