post-check;id#: 1069;v: 1.4;

--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -28,15 +28,33 @@ THREEJS, videoground-beta-world, Linux
 ## () - WEEK 2 - SUN 09/03/2023 - SAT 09/09/2023
 
 
+
+
+### () - SAT 09/09/2023
+
+### () - FRI 09/08/2023
+
+### () - THU 09/07/2023
 * () new: start post # 1070 on threejs-
 
+### () - WED 09/06/2023
+
+### () - TUE 09/05/2023
+
+### () - MON 09/04/2023
+
 ### () - SUN 09/03/2023
+* (done) edit: threejs-buffer-geometry-utils - expand opening of basic section.
 <!-- EDIT -->
 * () forpost: threejs-buffer-geometry-utils - I am going to want another basic seciton demo
 * () edit: threejs-buffer-geometry-utils - write about new basic demo
 <!-- EDIT 5k+ -->
 * () forpost: threejs-buffer-geometry - keep expanding builtin section
 * () forpost: threejs-buffer-geometry - write about new demos
+<!-- videoground-beta-world -->
+* () audio-generator-1 - start posting videos for this
+<!-- electionjs -->
+* () electionjs - work on position editor
 
 <!-------- ----------
 -- WEEK 1
@@ -48,10 +66,6 @@ THREEJS, videoground-beta-world, Linux
 * (done) edit: threejs-buffer-geometry-utils - write about new basic demo
 * (done) forpost: threejs-buffer-geometry - keep expanding builtin section
 * (done) forpost: threejs-buffer-geometry - write about new demos
-<!-- videoground-beta-world -->
-* () audio-generator-1 - start posting videos for this
-<!-- electionjs -->
-* () electionjs - work on position editor
 
 ### () - FRI 09/01/2023
 * (done) edit: threejs-buffer-geometry-utils - expand with what I have in place at least
