post-check;id#: 1069;v: 1.5;

--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -42,12 +42,14 @@ THREEJS, videoground-beta-world, Linux
 ### () - TUE 09/05/2023
 
 ### () - MON 09/04/2023
+<!-- EDIT 5k+ -->
+* () forpost: threejs-buffer-geometry - keep expanding builtin section
+* () forpost: threejs-buffer-geometry - write about new demos
 
 ### () - SUN 09/03/2023
 * (done) edit: threejs-buffer-geometry-utils - expand opening of basic section.
-<!-- EDIT -->
-* () forpost: threejs-buffer-geometry-utils - I am going to want another basic seciton demo
-* () edit: threejs-buffer-geometry-utils - write about new basic demo
+* (done) forpost: threejs-buffer-geometry-utils - I am going to want another basic seciton demo
+* (done) edit: threejs-buffer-geometry-utils - write about new basic demo
 <!-- EDIT 5k+ -->
 * () forpost: threejs-buffer-geometry - keep expanding builtin section
 * () forpost: threejs-buffer-geometry - write about new demos
