--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -50,9 +50,8 @@ THREEJS, videoground-beta-world, Linux
 * (done) edit: threejs-buffer-geometry-utils - expand opening of basic section.
 * (done) forpost: threejs-buffer-geometry-utils - I am going to want another basic seciton demo
 * (done) edit: threejs-buffer-geometry-utils - write about new basic demo
-<!-- EDIT 5k+ -->
-* () forpost: threejs-buffer-geometry - keep expanding builtin section
-* () forpost: threejs-buffer-geometry - write about new demos
+* (done) forpost: threejs-buffer-geometry - keep expanding builtin section
+* (done) forpost: threejs-buffer-geometry - write about new demos
 <!-- videoground-beta-world -->
 * () audio-generator-1 - start posting videos for this
 <!-- electionjs -->
