--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -42,9 +42,11 @@ THREEJS, videoground-beta-world, Linux
 ### () - TUE 09/05/2023
 
 ### () - MON 09/04/2023
+* (done) forpost: threejs-examples-biplane : style update
+* (done) edit: threejs-examples-biplane : proof read, update code
 <!-- EDIT 5k+ -->
 * () forpost: threejs-buffer-geometry - keep expanding builtin section
-* () forpost: threejs-buffer-geometry - write about new demos
+* () edit: threejs-buffer-geometry - write about new demos
 
 ### () - SUN 09/03/2023
 * (done) edit: threejs-buffer-geometry-utils - expand opening of basic section.
