post-check;id#: 851;v: 1.84;

--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -44,9 +44,12 @@ THREEJS, videoground-beta-world, Linux
 ### () - MON 09/04/2023
 * (done) forpost: threejs-examples-biplane : style update
 * (done) edit: threejs-examples-biplane : proof read, update code
-<!-- EDIT 5k+ -->
-* () forpost: threejs-buffer-geometry - keep expanding builtin section
-* () edit: threejs-buffer-geometry - write about new demos
+* (done) forpost: threejs-buffer-geometry - keep expanding builtin section
+* (done) edit: threejs-buffer-geometry - write about new demos
+<!-- videoground-beta-world -->
+* () audio-generator-1 - start posting videos for this
+<!-- electionjs -->
+* () electionjs - work on position editor
 
 ### () - SUN 09/03/2023
 * (done) edit: threejs-buffer-geometry-utils - expand opening of basic section.
@@ -54,10 +57,6 @@ THREEJS, videoground-beta-world, Linux
 * (done) edit: threejs-buffer-geometry-utils - write about new basic demo
 * (done) forpost: threejs-buffer-geometry - keep expanding builtin section
 * (done) forpost: threejs-buffer-geometry - write about new demos
-<!-- videoground-beta-world -->
-* () audio-generator-1 - start posting videos for this
-<!-- electionjs -->
-* () electionjs - work on position editor
 
 <!-------- ----------
 -- WEEK 1
