post-check;id#: 806;v: 1.35;

--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -40,16 +40,23 @@ THREEJS, videoground-beta-world, Linux
 ### () - WED 09/06/2023
 
 ### () - TUE 09/05/2023
+* (done) forpost : threejs-examples-biplane-group - take a look at the folder
+* (done) edit : threejs-examples-biplane-group - proof read, update any code changes
+<!-- edit 5k -->
+* () forpost : threejs-buffer-geometry - expand builtin section
+* () edit : threejs-buffer-geometry - write about new builtin demos
+<!-- videoground-beta-world -->
+* () audio-generator-1 - post video01-1-wavelength-sin
+* () audio-generator-1 - work more on tracks
+<!-- electionjs -->
+* () electionjs - work on position editor
 
 ### () - MON 09/04/2023
 * (done) forpost: threejs-examples-biplane : style update
 * (done) edit: threejs-examples-biplane : proof read, update code
 * (done) forpost: threejs-buffer-geometry - keep expanding builtin section
 * (done) edit: threejs-buffer-geometry - write about new demos
-<!-- videoground-beta-world -->
-* () audio-generator-1 - start posting videos for this
-<!-- electionjs -->
-* () electionjs - work on position editor
+* (done) audio-generator-1 - work more on videos
 
 ### () - SUN 09/03/2023
 * (done) edit: threejs-buffer-geometry-utils - expand opening of basic section.
