post-check;id#: 851;v: 1.85;

--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -42,9 +42,8 @@ THREEJS, videoground-beta-world, Linux
 ### () - TUE 09/05/2023
 * (done) forpost : threejs-examples-biplane-group - take a look at the folder
 * (done) edit : threejs-examples-biplane-group - proof read, update any code changes
-<!-- edit 5k -->
-* () forpost : threejs-buffer-geometry - expand builtin section
-* () edit : threejs-buffer-geometry - write about new builtin demos
+* (done) forpost : threejs-buffer-geometry - expand builtin section
+* (done) edit : threejs-buffer-geometry - write about new builtin demos
 <!-- videoground-beta-world -->
 * () audio-generator-1 - post video01-1-wavelength-sin
 * () audio-generator-1 - work more on tracks
