post-check;id#: 998;v: 1.17;

--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -38,17 +38,23 @@ THREEJS, videoground-beta-world, Linux
 * () new: start post # 1070 on threejs-
 
 ### () - WED 09/06/2023
+* (done) forpost : threejs-examples-aplerp : r146 update
+* (done) edit : threejs-examples-aplerp : proof read, update code
+<!-- edit 5k -->
+* () forpost : threejs-buffer-geometry - expand builtin section
+* () edit : threejs-buffer-geometry - write about new builtin demos
+<!-- videoground-beta-world -->
+* () audio-generator-tunes - start a new folder for 'tunes'
+<!-- electionjs -->
+* () electionjs - work on position editor
 
 ### () - TUE 09/05/2023
 * (done) forpost : threejs-examples-biplane-group - take a look at the folder
 * (done) edit : threejs-examples-biplane-group - proof read, update any code changes
 * (done) forpost : threejs-buffer-geometry - expand builtin section
 * (done) edit : threejs-buffer-geometry - write about new builtin demos
-<!-- videoground-beta-world -->
-* () audio-generator-1 - post video01-1-wavelength-sin
-* () audio-generator-1 - work more on tracks
-<!-- electionjs -->
-* () electionjs - work on position editor
+* (done) audio-generator-1 - post video01-1-wavelength-sin
+* (done) audio-generator-1 - work more on tracks
 
 ### () - MON 09/04/2023
 * (done) forpost: threejs-examples-biplane : style update
