post-check;id#: 851;v: 1.87;

--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -35,14 +35,17 @@ THREEJS, videoground-beta-world, Linux
 ### () - FRI 09/08/2023
 
 ### () - THU 09/07/2023
+<!-- new -->
 * () new: start post # 1070 on threejs-
 
 ### () - WED 09/06/2023
 * (done) forpost : threejs-examples-aplerp : r146 update
 * (done) edit : threejs-examples-aplerp : proof read, update code
-<!-- edit 5k -->
-* () forpost : threejs-buffer-geometry - expand builtin section
-* () edit : threejs-buffer-geometry - write about new builtin demos
+* (done) forpost : threejs-buffer-geometry - expand builtin section
+* (done) edit : threejs-buffer-geometry - write about new builtin demos
+<!-- new -->
+* () new: work out some r152 demos
+* () new: start a for post folder for tomorrow
 <!-- videoground-beta-world -->
 * () audio-generator-tunes - start a new folder for 'tunes'
 <!-- electionjs -->
