--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -33,23 +33,25 @@ THREEJS, videoground-beta-world, Linux
 ### () - SAT 09/09/2023
 
 ### () - FRI 09/08/2023
+<!-- new -->
+* () new: start post # 1070 on threejs-drag-controls
 
 ### () - THU 09/07/2023
+* (done) new: work out a new r152 demo on drag-controls
 <!-- new -->
-* () new: start post # 1070 on threejs-
+* () new: start a threejs-drag-controls for post folder for tomorrow
+<!-- videoground-beta-world -->
+* () audio-generator-tunes - start a new folder for 'tunes'
+<!-- electionjs -->
+* () electionjs - work on position editor
+
 
 ### () - WED 09/06/2023
 * (done) forpost : threejs-examples-aplerp : r146 update
 * (done) edit : threejs-examples-aplerp : proof read, update code
 * (done) forpost : threejs-buffer-geometry - expand builtin section
 * (done) edit : threejs-buffer-geometry - write about new builtin demos
-<!-- new -->
-* () new: work out some r152 demos
-* () new: start a for post folder for tomorrow
-<!-- videoground-beta-world -->
-* () audio-generator-tunes - start a new folder for 'tunes'
-<!-- electionjs -->
-* () electionjs - work on position editor
+
 
 ### () - TUE 09/05/2023
 * (done) forpost : threejs-examples-biplane-group - take a look at the folder
