--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -33,13 +33,14 @@ THREEJS, videoground-beta-world, Linux
 ### () - SAT 09/09/2023
 
 ### () - FRI 09/08/2023
-<!-- new -->
-* () new: start post # 1070 on threejs-drag-controls
+<!-- edit -->
+* () edit : threejs-drag-controls - 
 
 ### () - THU 09/07/2023
 * (done) new: work out a new r152 demo on drag-controls
-<!-- new -->
-* () new: start a threejs-drag-controls for post folder for tomorrow
+* (done) new: start a threejs-drag-controls for post folder for tomorrow
+* (done) new: start post # 1070 on threejs-drag-controls
+
 <!-- videoground-beta-world -->
 * () audio-generator-tunes - start a new folder for 'tunes'
 <!-- electionjs -->
