--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -33,19 +33,18 @@ THREEJS, videoground-beta-world, Linux
 ### () - SAT 09/09/2023
 
 ### () - FRI 09/08/2023
-<!-- edit -->
-* () edit : threejs-drag-controls - 
-
-### () - THU 09/07/2023
-* (done) new: work out a new r152 demo on drag-controls
-* (done) new: start a threejs-drag-controls for post folder for tomorrow
-* (done) new: start post # 1070 on threejs-drag-controls
-
+* (done) edit : threejs-drag-controls - opening and conclusion
+* (done) forpost: threejs-buffer-geometry - new built in demos
+* (done) edit : threejs-buffer-geometry - write about new demos
 <!-- videoground-beta-world -->
 * () audio-generator-tunes - start a new folder for 'tunes'
 <!-- electionjs -->
 * () electionjs - work on position editor
 
+### () - THU 09/07/2023
+* (done) new: work out a new r152 demo on drag-controls
+* (done) new: start a threejs-drag-controls for post folder for tomorrow
+* (done) new: start post # 1070 on threejs-drag-controls
 
 ### () - WED 09/06/2023
 * (done) forpost : threejs-examples-aplerp : r146 update
