--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -20,6 +20,7 @@ THREEJS, videoground-beta-world, Linux
 <!-------- ----------
 -- NEW POST IDEAS THREEJS
 ---------- --------->
+* () new : threejs-polyhedron-geometry - main post on this built in geometry constructor
 * () new : threejs-sprite-material - post on the sprite material alone maybe
 
 <!-------- ----------
