post-check;id#: 851;v: 1.89;

--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -32,6 +32,8 @@ THREEJS, videoground-beta-world, Linux
 
 
 ### () - SAT 09/09/2023
+* (done) forpost: threejs-buffer-geometry - new built in demo
+* (done) edit : threejs-buffer-geometry - write about new demo
 
 ### () - FRI 09/08/2023
 * (done) edit : threejs-drag-controls - opening and conclusion
