--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -24,12 +24,32 @@ THREEJS, videoground-beta-world, Linux
 * () new : threejs-sprite-material - post on the sprite material alone maybe
 
 <!-------- ----------
+-- WEEK 3
+---------- --------->
+## () - WEEK 3 - SUN 09/10/2023 - SAT 09/16/2023
+
+### () - SAT 09/16/2023
+
+### () - FRI 09/15/2023
+
+### () - THU 09/14/2023
+
+### () - WED 09/13/2023
+
+### () - TUE 09/12/2023
+
+### () - MON 09/11/2023
+
+### () - SUN 09/10/2023
+<!-- videoground-beta-world -->
+* () audio-generator-tunes - start a new folder for 'tunes'
+<!-- electionjs -->
+* () electionjs - work on position editor
+
+<!-------- ----------
 -- WEEK 2
 ---------- --------->
 ## () - WEEK 2 - SUN 09/03/2023 - SAT 09/09/2023
-
-
-
 
 ### () - SAT 09/09/2023
 * (done) forpost: threejs-buffer-geometry - new built in demo
@@ -39,10 +59,6 @@ THREEJS, videoground-beta-world, Linux
 * (done) edit : threejs-drag-controls - opening and conclusion
 * (done) forpost: threejs-buffer-geometry - new built in demos
 * (done) edit : threejs-buffer-geometry - write about new demos
-<!-- videoground-beta-world -->
-* () audio-generator-tunes - start a new folder for 'tunes'
-<!-- electionjs -->
-* () electionjs - work on position editor
 
 ### () - THU 09/07/2023
 * (done) new: work out a new r152 demo on drag-controls
