post-check;id#: 999;v: 1.8;

--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -33,18 +33,28 @@ THREEJS, videoground-beta-world, Linux
 ### () - FRI 09/15/2023
 
 ### () - THU 09/14/2023
+* () new: start post # 1071 on threejs-polyhedron-geometry
 
 ### () - WED 09/13/2023
 
 ### () - TUE 09/12/2023
 
 ### () - MON 09/11/2023
-
-### () - SUN 09/10/2023
+<!-- edit -->
+* () forpost: threejs-examples-camera-kit - check state of folder, update to r146
+* () edit: threejs-examples-camera-kit - new code, proof read, ect
+<!-- edit 5k -->
+* () forpost: threejs-buffer-geometry - new built in section demos
+* () edit: threejs-buffer-geometry -  write about new built in demos
+<!-- new -->
+* () start a for post folder for threejs-polyhedron-geometry
 <!-- videoground-beta-world -->
 * () audio-generator-tunes - start a new folder for 'tunes'
 <!-- electionjs -->
 * () electionjs - work on position editor
+
+### () - SUN 09/10/2023
+* (done) audio-generator-tunes - work on videos, and new wav export feature
 
 <!-------- ----------
 -- WEEK 2
