--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -40,9 +40,8 @@ THREEJS, videoground-beta-world, Linux
 ### () - TUE 09/12/2023
 
 ### () - MON 09/11/2023
-<!-- edit -->
-* () forpost: threejs-examples-camera-kit - check state of folder, update to r146
-* () edit: threejs-examples-camera-kit - new code, proof read, ect
+* (done) forpost: threejs-examples-camera-kit - check state of folder, update to r146
+* (done) edit: threejs-examples-camera-kit - new code, proof read, ect
 <!-- edit 5k -->
 * () forpost: threejs-buffer-geometry - new built in section demos
 * () edit: threejs-buffer-geometry -  write about new built in demos
