post-check;id#: 851;v: 1.91;

--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -31,20 +31,32 @@ THREEJS, videoground-beta-world, Linux
 ### () - SAT 09/16/2023
 
 ### () - FRI 09/15/2023
+<!-- edit 5k -->
+* () forpost: threejs-buffer-geometry - new built in section demos
+* () edit: threejs-buffer-geometry -  write about new built in demos
 
 ### () - THU 09/14/2023
 * () new: start post # 1071 on threejs-polyhedron-geometry
+<!-- edit 5k -->
+* () forpost: threejs-buffer-geometry - new built in section demos
+* () edit: threejs-buffer-geometry -  write about new built in demos
 
 ### () - WED 09/13/2023
+<!-- edit 5k -->
+* () forpost: threejs-buffer-geometry - new built in section demos
+* () edit: threejs-buffer-geometry -  write about new built in demos
 
 ### () - TUE 09/12/2023
+<!-- edit 5k -->
+* () forpost: threejs-buffer-geometry - new built in section demos
+* () edit: threejs-buffer-geometry -  write about new built in demos
+
 
 ### () - MON 09/11/2023
 * (done) forpost: threejs-examples-camera-kit - check state of folder, update to r146
 * (done) edit: threejs-examples-camera-kit - new code, proof read, ect
-<!-- edit 5k -->
-* () forpost: threejs-buffer-geometry - new built in section demos
-* () edit: threejs-buffer-geometry -  write about new built in demos
+* (done) forpost: threejs-buffer-geometry - new built in section demos
+* (done) edit: threejs-buffer-geometry -  write about new built in demos
 <!-- new -->
 * () start a for post folder for threejs-polyhedron-geometry
 <!-- videoground-beta-world -->
