--- a/todo/today/todo_2023_09.md
+++ b/todo/today/todo_2023_09.md
@@ -50,6 +50,8 @@ THREEJS, videoground-beta-world, Linux
 <!-- edit 5k -->
 * () forpost: threejs-buffer-geometry - new built in section demos
 * () edit: threejs-buffer-geometry -  write about new built in demos
+<!-- new -->
+* () forpost: threejs-polyhedron-geometry - expand demos
 
 
 ### () - MON 09/11/2023
@@ -57,8 +59,7 @@ THREEJS, videoground-beta-world, Linux
 * (done) edit: threejs-examples-camera-kit - new code, proof read, ect
 * (done) forpost: threejs-buffer-geometry - new built in section demos
 * (done) edit: threejs-buffer-geometry -  write about new built in demos
-<!-- new -->
-* () start a for post folder for threejs-polyhedron-geometry
+* (done) start a for post folder for threejs-polyhedron-geometry
 <!-- videoground-beta-world -->
 * () audio-generator-tunes - start a new folder for 'tunes'
 <!-- electionjs -->
